D add license section to texinfo
Signed-off-by: Sean Hutchings <seanhut@yandex.com>

--- a/eping.texinfo
+++ b/eping.texinfo
@@ -19,6 +19,7 @@ This manual is for Eping 0.1.0
 * Dependencies::
 * How to use Eping::
 * Configuration::
+* Eping License::
 @end menu
 
 @node Overview
@@ -123,5 +124,23 @@ number strings of their choice.  Here is an example:
 @lisp
 (setq eping-number-pings-options '("10" "20" "30"))
 @end lisp
+
+@node Eping License
+@appendix Eping License
+
+@cindex License
+
+Copyright @copyright{} 2020 Sean Hutchings
+
+Permission to use, copy, modify, and/or distribute this software for any
+purpose with or without fee is hereby granted.
+
+THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH
+REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY
+AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT,
+INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM
+LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR
+OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
+PERFORMANCE OF THIS SOFTWARE.
 
 @bye
